  Set[Char]{In,Ex}cludes(), instead of mutating the internal data directly.

- Under macOS, 10.9 SDK is used by default now. 10.7 SDK is still supported,
  but must be explicitly selected (and libstdc++ must be installed in order
  to use it).

- wxPGProperty ctors are not longer public since this class is intended to be
  a base class and should not be instantiated directly.

3.1.3: (released 2019-??-??)
----------------------------

INCOMPATIBLE CHANGES SINCE 3.1.2:

- New wxTranslations::GetAcceptableTranslations() method was problematic and
  was removed, fixing various regressions in wxTranslations::AddCatalog() that
  were introduced by it. Thanks to Tomasz Słodkowicz and Dummy for reporting
  this and providing fixes for it.


All (GUI):

- Fix wxInfoBar close button size in high DPI (Stefan Ziegler).
- Make disabling the window before creating it actually work.
- Implement wxAuiNotebook::GetBestSize() (Sebastian Walderich).
- Add support for editing dates (without time) to wxGrid (Pavel Kalugin).
- Allow changing tooltip text for button allowing to enter a new string
  in wxPGArrayEditorDialog.
- Fix wxPropertyGrid issues with horizontal scrolling.

wxGTK:

- Invalidate selection after deleting wxListBox item with GTK+ 3 too.

wxMSW:

- Fix passing Unicode strings via wxIPC when using DDE.
- Improve wxDataViewCtrl performance with variable line heights (Jens Goepfert).


3.1.2: (released 2018-12-10)
----------------------------

All:

- Add wxLZMA{Input,Output}Stream classes using external liblzma.
- Make wxList and wxVector iterators conform to input iterator requirements.
- Fix MT-safety problem when reading and writing from wxSocket (jkubalik).
- Fix build issues under HaikuOS (mill-j).
- Fix problem with wx-config installation and use under NetBSD (wiz).
- Avoid spurious errors on thread creation under NetBSD.
- Improve high DPI support in wxAui (Simon Rozman).
- Fix a bug with parsing time zones in wxDateTime::ParseFormat() (evileye).