@@ -123,6 +123,9 @@ Changes in behaviour which may result in build errors
 - wxPGProperty ctors are not longer public since this class is intended to be
   a base class and should not be instantiated directly.
 
+- wxIntProperty::DoValidation() and wxFloatProperty::DoValidation() are
+  no longer public since they are helpers intended for internal use only.
+
 3.1.3: (released 2019-??-??)
 ----------------------------
 
